--- a/model.ipynb
+++ b/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "3a0a1165",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a95878e4",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6691c245",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_20848\\853863136.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_5816\\853863136.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  data = yf.download(TICKER,start=START_DATE,end=END_DATE)\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8d58f8b8",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "dbb9a366",
    "metadata": {},
    "outputs": [
@@ -128,6 +128,16 @@
    "source": [
     "print(\"===== Data Informmation =====\")\n",
     "print(data.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f8bea52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"mastercard_stock_data.csv\",index=False)"
    ]
   },
   {
@@ -863,7 +873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -877,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
